# LIDAR-Odometry

./: .gitignore  AGENT_HANDOFF.md  DESCRIPTION.md  Dockerfile  LIO_SAM_NOTES.md  README.md  README_LIO_SAM.md  config.yaml  config_liosam.yaml  config_test2.yaml  convert_bag.py  demo.mov  docker-compose.yml  patch.py  patch_yaml.py  pointcloud.txt  report.md  requirements.txt  run_lio_sam.sh  run_liosam_pipeline.sh  run_pipeline.py  test.py  test2.py  verify_bag.py
LIO-SAM-6AXIS-src/: featureExtraction.cpp  imuPreintegration.cpp  mapOptmization.cpp
bag_preparation/: convert_bag.py  fix_ouster_bag.py
bags/: .gitkeep
config/: config_ros.json  config_sensors.json  orig_params.yaml  type_integrity.yaml
configs/: config_test1.yaml  config_test2.yaml
data/: gnss_origin.json  raw_gnss.json  trajectories.json
docker/: Dockerfile  build.sh  lio_sam.launch  lio_sam_overrides.yaml  run_in_docker.sh
plots/: .gitkeep  create_map_html.py  plot_pcd.py  plot_rmse.py  plot_viewer_map2.html
ros2_packages/aspn_msgs/: CMakeLists.txt  package.xml
ros2_packages/aspn_msgs/msg/: MeasurementAttitude3D.msg  MeasurementIMU.msg  TypeHeader.msg  TypeIntegrity.msg  TypeTimestamp.msg
scripts/: bag_converter.py  build_ros1_bag.py  colorize_map.py  compute_rmse.py  diagnose_frame.py  dump_gps.py  export_trajectory.py  export_trajectory_geo.py  extract_attitude.py  extract_ground_truth.py  extract_origin.py  find_timeoffset.py  format_slam_output.py  imu_pure_speed.py  imu_speed.py  inspect_bag.py  odom_to_poses.py  partial_map.py  patch.py  patch_bag_gps.py  patch_yaml.py  plot_map.py  (+19 more)
(+60 files in other folders)
