<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aspn_msgs</name>
  <version>0.0.1</version>
  <description>Reconstructed ASPN 2023 ICD messages (MeasurementIMU, MeasurementAttitude3D) with ROS2 header, for course rosbag compatibility</description>
  <maintainer email="maulana@campus.tu-berlin.com">maulana</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
